--- a/lib/gui.ui
+++ b/lib/gui.ui
@@ -587,7 +587,7 @@
            <x>5</x>
            <y>0</y>
            <width>60</width>
-           <height>20</height>
+           <height>23</height>
           </rect>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_3">
@@ -629,7 +629,7 @@
            <x>5</x>
            <y>0</y>
            <width>60</width>
-           <height>20</height>
+           <height>23</height>
           </rect>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_8">
@@ -671,7 +671,7 @@
            <x>5</x>
            <y>0</y>
            <width>60</width>
-           <height>20</height>
+           <height>23</height>
           </rect>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout">
@@ -1130,7 +1130,7 @@
        <x>20</x>
        <y>10</y>
        <width>392</width>
-       <height>45</height>
+       <height>48</height>
       </rect>
      </property>
      <layout class="QGridLayout" name="gridLayout_3">
@@ -1145,6 +1145,11 @@
         <property name="toolTip">
          <string>Outs</string>
         </property>
+        <item>
+         <property name="text">
+          <string>--</string>
+         </property>
+        </item>
         <item>
          <property name="text">
           <string>0</string>
@@ -1450,7 +1455,7 @@
      <x>0</x>
      <y>0</y>
      <width>813</width>
-     <height>21</height>
+     <height>25</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuArchivo">
